--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Harry Potter and the Goblet of JavaScript</title>
+    <link rel="stylesheet" href="/static/css/main.css">
+    <title>GOJS</title>
 </head>
 <body>
-
+<h5>Harry Potter and the Goblet of JavaScript</h5>
 </body>
 </html>
