--- a/templates/index.html
+++ b/templates/index.html
@@ -8,125 +8,174 @@
 </head>
 <body>
 <h5>Harry Potter and the Goblet of JavaScript</h5>
-<table class="game-field">
-    <tr>
-        <td class="cell"></td>
-        <td class="cell"></td>
-        <td class="cell"></td>
-        <td class="cell"></td>
-        <td class="cell"></td>
-        <td class="cell"></td>
-        <td class="cell"></td>
-        <td class="cell"></td>
-        <td class="cell"></td>
-        <td class="cell"></td>
-    </tr>
-    <tr>
-        <td class="cell"></td>
-        <td class="cell"></td>
-        <td class="cell"></td>
-        <td class="cell"></td>
-        <td class="cell"></td>
-        <td class="cell"></td>
-        <td class="cell"></td>
-        <td class="cell"></td>
-        <td class="cell"></td>
-        <td class="cell"></td>
-    </tr>
-    <tr>
-        <td class="cell"></td>
-        <td class="cell"></td>
-        <td class="cell"></td>
-        <td class="cell"></td>
-        <td class="cell"></td>
-        <td class="cell"></td>
-        <td class="cell"></td>
-        <td class="cell"></td>
-        <td class="cell"></td>
-        <td class="cell"></td>
-    </tr>
-    <tr>
-        <td class="cell"></td>
-        <td class="cell"></td>
-        <td class="cell"></td>
-        <td class="cell"></td>
-        <td class="cell"></td>
-        <td class="cell"></td>
-        <td class="cell"></td>
-        <td class="cell"></td>
-        <td class="cell"></td>
-        <td class="cell"></td>
-    </tr>
-    <tr>
-        <td class="cell"></td>
-        <td class="cell"></td>
-        <td class="cell"></td>
-        <td class="cell"></td>
-        <td class="cell"></td>
-        <td class="cell"></td>
-        <td class="cell"></td>
-        <td class="cell"></td>
-        <td class="cell"></td>
-        <td class="cell"></td>
-    </tr>
-    <tr>
-        <td class="cell"></td>
-        <td class="cell"></td>
-        <td class="cell"></td>
-        <td class="cell"></td>
-        <td class="cell"></td>
-        <td class="cell"></td>
-        <td class="cell"></td>
-        <td class="cell"></td>
-        <td class="cell"></td>
-        <td class="cell"></td>
-    </tr>
-    <tr>
-        <td class="cell"></td>
-        <td class="cell"></td>
-        <td class="cell"></td>
-        <td class="cell"></td>
-        <td class="cell"></td>
-        <td class="cell"></td>
-        <td class="cell"></td>
-        <td class="cell"></td>
-        <td class="cell"></td>
-        <td class="cell"></td>
-    </tr>
-    <tr>
-        <td class="cell"></td>
-        <td class="cell"></td>
-        <td class="cell"></td>
-        <td class="cell"></td>
-        <td class="cell"></td>
-        <td class="cell"></td>
-        <td class="cell"></td>
-        <td class="cell"></td>
-        <td class="cell"></td>
-        <td class="cell"></td>
-    </tr>
-    <tr>
-        <td class="cell"></td>
-        <td class="cell"></td>
-        <td class="cell"></td>
-        <td class="cell"></td>
-        <td class="cell"></td>
-        <td class="cell"></td>
-        <td class="cell"></td>
-        <td class="cell"></td>
-        <td class="cell"></td>
-        <td class="cell"></td>
-    </tr>
-    <tr>
-        <td class="cell"></td>
-        <td class="cell"></td>
-        <td class="cell"></td>
-        <td class="cell"></td>
-        <td class="cell"></td>
-        <td class="cell"></td>
-        <td class="cell"></td>
-        <td class="cell"></td>
-        <td class="cell"></td>
-        <td class="cell"></td>
-    </tr>
+<table class="instruction">
+    <thead>
+    <th>Instruction</th>
+    </thead>
+    <tbody>
+    <td>
+        <p>You have to get the Goblet in order to win.</p>
+        <p>You are the deathly hallows symbol.</p>
+        <p>You can use the key symbol to open the door.</p>
+        <p>You can use the water symbol to get through the fire symbol.</p>
+        <p>You can use the bomb symbol to destroy 4 walls next to you.</p>
+        <p>You can destroy the dementor by pressing 'x' when it is under you.</p>
+        <p>If the dementor is next to you, and it reaches you, you die and you have to start over if you want.</p>
+    </td>
+    </tbody>
 </table>
+<table class="inventory">
+    <thead>
+    <th>Inventory</th>
+    </thead>
+    <tbody>
+    <tr>
+        <td>
+            <p>Something</p>
+        </td>
+    </tr>
+    </tbody>
+</table>
+<table class="game-field">
+{#    <tr>#}
+{#        <td class="cell"></td>#}
+{#        <td class="cell"></td>#}
+{#        <td class="cell"></td>#}
+{#        <td class="cell"></td>#}
+{#        <td class="cell"></td>#}
+{#        <td class="cell">#}
+{#            <img src="/static/image/lock.png" alt="door" id="door">#}
+{#        </td>#}
+{#        <td class="cell"></td>#}
+{#        <td class="cell-wall"></td>#}
+{#        <td class="cell"></td>#}
+{#        <td class="cell">#}
+{#            <img src="/static/image/goblet-field.png" alt="goblet" id="goblet">#}
+{#        </td>#}
+{#    </tr>#}
+{#    <tr>#}
+{#        <td class="cell"></td>#}
+{#        <td class="cell">#}
+{#            <img src="/static/image/dementor.png" alt="dementor" id="enemy">#}
+{#        </td>#}
+{#        <td class="cell"></td>#}
+{#        <td class="cell"></td>#}
+{#        <td class="cell"></td>#}
+{#        <td class="cell-wall"></td>#}
+{#        <td class="cell"></td>#}
+{#        <td class="cell-wall"></td>#}
+{#        <td class="cell"></td>#}
+{#        <td class="cell"></td>#}
+{#    </tr>#}
+{#    <tr>#}
+{#        <td class="cell">#}
+{#            <img src="/static/image/fire.png" alt="fire" id="fire">#}
+{#        </td>#}
+{#        <td class="cell-wall"></td>#}
+{#        <td class="cell-wall"></td>#}
+{#        <td class="cell-wall"></td>#}
+{#        <td class="cell-wall"></td>#}
+{#        <td class="cell-wall"></td>#}
+{#        <td class="cell"></td>#}
+{#        <td class="cell-wall"></td>#}
+{#        <td class="cell-wall"></td>#}
+{#        <td class="cell-wall"></td>#}
+{#    </tr>#}
+{#    <tr>#}
+{#        <td class="cell"></td>#}
+{#        <td class="cell"></td>#}
+{#        <td class="cell">#}
+{#            <img src="/static/image/bomb.png" alt="bomb" id="bomb">#}
+{#        </td>#}
+{#        <td class="cell-wall"></td>#}
+{#        <td class="cell"></td>#}
+{#        <td class="cell"></td>#}
+{#        <td class="cell"></td>#}
+{#        <td class="cell"></td>#}
+{#        <td class="cell"></td>#}
+{#        <td class="cell"></td>#}
+{#    </tr>#}
+{#    <tr>#}
+{#        <td class="cell-wall"></td>#}
+{#        <td class="cell-wall"></td>#}
+{#        <td class="cell-wall"></td>#}
+{#        <td class="cell-wall"></td>#}
+{#        <td class="cell"></td>#}
+{#        <td class="cell-wall"></td>#}
+{#        <td class="cell-wall"></td>#}
+{#        <td class="cell-wall"></td>#}
+{#        <td class="cell-wall"></td>#}
+{#        <td class="cell">#}
+{#            <img src="/static/image/key.jpg" alt="key" id="key">#}
+{#        </td>#}
+{#    </tr>#}
+{#    <tr>#}
+{#        <td class="cell">#}
+{#            <img src="/static/image/water.png" alt="water" id="water">#}
+{#        </td>#}
+{#        <td class="cell"></td>#}
+{#        <td class="cell"></td>#}
+{#        <td class="cell"></td>#}
+{#        <td class="cell"></td>#}
+{#        <td class="cell"></td>#}
+{#        <td class="cell"></td>#}
+{#        <td class="cell"></td>#}
+{#        <td class="cell"></td>#}
+{#        <td class="cell"></td>#}
+{#    </tr>#}
+{#    <tr>#}
+{#        <td class="cell-wall"></td>#}
+{#        <td class="cell-wall"></td>#}
+{#        <td class="cell-wall"></td>#}
+{#        <td class="cell-wall"></td>#}
+{#        <td class="cell-wall"></td>#}
+{#        <td class="cell">#}
+{#            <img src="/static/image/fire.png" alt="fire" id="fire">#}
+{#        </td>#}
+{#        <td class="cell-wall"></td>#}
+{#        <td class="cell-wall"></td>#}
+{#        <td class="cell-wall"></td>#}
+{#        <td class="cell-wall"></td>#}
+{#    </tr>#}
+{#    <tr>#}
+{#        <td class="cell">#}
+{#            <img src="/static/image/water.png" alt="water" id="water">#}
+{#        </td>#}
+{#        <td class="cell"></td>#}
+{#        <td class="cell"></td>#}
+{#        <td class="cell"></td>#}
+{#        <td class="cell"></td>#}
+{#        <td class="cell"></td>#}
+{#        <td class="cell"></td>#}
+{#        <td class="cell"></td>#}
+{#        <td class="cell"></td>#}
+{#        <td class="cell"></td>#}
+{#    </tr>#}
+{#    <tr>#}
+{#        <td class="cell-wall"></td>#}
+{#        <td class="cell-wall"></td>#}
+{#        <td class="cell-wall"></td>#}
+{#        <td class="cell-wall"></td>#}
+{#        <td class="cell-wall"></td>#}
+{#        <td class="cell-wall"></td>#}
+{#        <td class="cell-wall"></td>#}
+{#        <td class="cell-wall"></td>#}
+{#        <td class="cell-wall"></td>#}
+{#        <td class="cell"></td>#}
+{#    </tr>#}
+{#    <tr>#}
+{#        <td class="cell"></td>#}
+{#        <td class="cell">#}
+{#            <img src="/static/image/harrypotter.png" alt="harrypotter" id="character">#}
+{#        </td>#}
+{#        <td class="cell"></td>#}
+{#        <td class="cell"></td>#}
+{#        <td class="cell"></td>#}
+{#        <td class="cell"></td>#}
+{#        <td class="cell"></td>#}
+{#        <td class="cell"></td>#}
+{#        <td class="cell"></td>#}
+{#        <td class="cell"></td>#}
+{#    </tr>#}
+</table>
+</body>
