deleted useless html part

--- a/templates/index.html
+++ b/templates/index.html
@@ -36,146 +36,5 @@
     </tr>
     </tbody>
 </table>
-<table class="game-field">
-{#    <tr>#}
-{#        <td class="cell"></td>#}
-{#        <td class="cell"></td>#}
-{#        <td class="cell"></td>#}
-{#        <td class="cell"></td>#}
-{#        <td class="cell"></td>#}
-{#        <td class="cell">#}
-{#            <img src="/static/image/lock.png" alt="door" id="door">#}
-{#        </td>#}
-{#        <td class="cell"></td>#}
-{#        <td class="cell-wall"></td>#}
-{#        <td class="cell"></td>#}
-{#        <td class="cell">#}
-{#            <img src="/static/image/goblet-field.png" alt="goblet" id="goblet">#}
-{#        </td>#}
-{#    </tr>#}
-{#    <tr>#}
-{#        <td class="cell"></td>#}
-{#        <td class="cell">#}
-{#            <img src="/static/image/dementor.png" alt="dementor" id="enemy">#}
-{#        </td>#}
-{#        <td class="cell"></td>#}
-{#        <td class="cell"></td>#}
-{#        <td class="cell"></td>#}
-{#        <td class="cell-wall"></td>#}
-{#        <td class="cell"></td>#}
-{#        <td class="cell-wall"></td>#}
-{#        <td class="cell"></td>#}
-{#        <td class="cell"></td>#}
-{#    </tr>#}
-{#    <tr>#}
-{#        <td class="cell">#}
-{#            <img src="/static/image/fire.png" alt="fire" id="fire">#}
-{#        </td>#}
-{#        <td class="cell-wall"></td>#}
-{#        <td class="cell-wall"></td>#}
-{#        <td class="cell-wall"></td>#}
-{#        <td class="cell-wall"></td>#}
-{#        <td class="cell-wall"></td>#}
-{#        <td class="cell"></td>#}
-{#        <td class="cell-wall"></td>#}
-{#        <td class="cell-wall"></td>#}
-{#        <td class="cell-wall"></td>#}
-{#    </tr>#}
-{#    <tr>#}
-{#        <td class="cell"></td>#}
-{#        <td class="cell"></td>#}
-{#        <td class="cell">#}
-{#            <img src="/static/image/bomb.png" alt="bomb" id="bomb">#}
-{#        </td>#}
-{#        <td class="cell-wall"></td>#}
-{#        <td class="cell"></td>#}
-{#        <td class="cell"></td>#}
-{#        <td class="cell"></td>#}
-{#        <td class="cell"></td>#}
-{#        <td class="cell"></td>#}
-{#        <td class="cell"></td>#}
-{#    </tr>#}
-{#    <tr>#}
-{#        <td class="cell-wall"></td>#}
-{#        <td class="cell-wall"></td>#}
-{#        <td class="cell-wall"></td>#}
-{#        <td class="cell-wall"></td>#}
-{#        <td class="cell"></td>#}
-{#        <td class="cell-wall"></td>#}
-{#        <td class="cell-wall"></td>#}
-{#        <td class="cell-wall"></td>#}
-{#        <td class="cell-wall"></td>#}
-{#        <td class="cell">#}
-{#            <img src="/static/image/key.jpg" alt="key" id="key">#}
-{#        </td>#}
-{#    </tr>#}
-{#    <tr>#}
-{#        <td class="cell">#}
-{#            <img src="/static/image/water.png" alt="water" id="water">#}
-{#        </td>#}
-{#        <td class="cell"></td>#}
-{#        <td class="cell"></td>#}
-{#        <td class="cell"></td>#}
-{#        <td class="cell"></td>#}
-{#        <td class="cell"></td>#}
-{#        <td class="cell"></td>#}
-{#        <td class="cell"></td>#}
-{#        <td class="cell"></td>#}
-{#        <td class="cell"></td>#}
-{#    </tr>#}
-{#    <tr>#}
-{#        <td class="cell-wall"></td>#}
-{#        <td class="cell-wall"></td>#}
-{#        <td class="cell-wall"></td>#}
-{#        <td class="cell-wall"></td>#}
-{#        <td class="cell-wall"></td>#}
-{#        <td class="cell">#}
-{#            <img src="/static/image/fire.png" alt="fire" id="fire">#}
-{#        </td>#}
-{#        <td class="cell-wall"></td>#}
-{#        <td class="cell-wall"></td>#}
-{#        <td class="cell-wall"></td>#}
-{#        <td class="cell-wall"></td>#}
-{#    </tr>#}
-{#    <tr>#}
-{#        <td class="cell">#}
-{#            <img src="/static/image/water.png" alt="water" id="water">#}
-{#        </td>#}
-{#        <td class="cell"></td>#}
-{#        <td class="cell"></td>#}
-{#        <td class="cell"></td>#}
-{#        <td class="cell"></td>#}
-{#        <td class="cell"></td>#}
-{#        <td class="cell"></td>#}
-{#        <td class="cell"></td>#}
-{#        <td class="cell"></td>#}
-{#        <td class="cell"></td>#}
-{#    </tr>#}
-{#    <tr>#}
-{#        <td class="cell-wall"></td>#}
-{#        <td class="cell-wall"></td>#}
-{#        <td class="cell-wall"></td>#}
-{#        <td class="cell-wall"></td>#}
-{#        <td class="cell-wall"></td>#}
-{#        <td class="cell-wall"></td>#}
-{#        <td class="cell-wall"></td>#}
-{#        <td class="cell-wall"></td>#}
-{#        <td class="cell-wall"></td>#}
-{#        <td class="cell"></td>#}
-{#    </tr>#}
-{#    <tr>#}
-{#        <td class="cell"></td>#}
-{#        <td class="cell">#}
-{#            <img src="/static/image/harrypotter.png" alt="harrypotter" id="character">#}
-{#        </td>#}
-{#        <td class="cell"></td>#}
-{#        <td class="cell"></td>#}
-{#        <td class="cell"></td>#}
-{#        <td class="cell"></td>#}
-{#        <td class="cell"></td>#}
-{#        <td class="cell"></td>#}
-{#        <td class="cell"></td>#}
-{#        <td class="cell"></td>#}
-{#    </tr>#}
-</table>
+<table class="game-field"></table>
 </body>
