deleted remaining dementors, changed < to >

--- a/templates/index.html
+++ b/templates/index.html
@@ -28,13 +28,7 @@
     <thead>
     <th>Inventory</th>
     </thead>
-    <tbody>
-    <tr>
-        <td>
-            <p>Something</p>
-        </td>
-    </tr>
-    </tbody>
+    <tbody></tbody>
 </table>
 <table class="game-field"></table>
 </body>
