Add printInventory function

--- a/templates/index.html
+++ b/templates/index.html
@@ -26,9 +26,15 @@
 </table>
 <table class="inventory">
     <thead>
-    <th>Inventory</th>
+    <th id="it">Inventory</th>
     </thead>
-    <tbody></tbody>
+    <tbody>
+    <tr>
+        <td id="water">Water: </td>
+        <td id="key">Key: </td>
+        <td id="bomb">Bomb: </td>
+    </tr>
+    </tbody>
 </table>
 <table class="game-field"></table>
 </body>
