write into the instuctions

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
         <p>You are the deathly hallows symbol.</p>
         <p>You can use the key symbol to open the door.</p>
         <p>You can use the water symbol to get through the fire symbol.</p>
-        <p>You can use the bomb symbol to destroy 4 walls next to you.</p>
+        <p>You can use the bomb by pressing 'b' to destroy 4 walls next to you.</p>
         <p>You can destroy the dementor by pressing 'x' when it is under you.</p>
         <p>If the dementor is next to you, and it reaches you, you die and you have to start over if you want.</p>
     </td>
